--- a/ADP.htm
+++ b/ADP.htm
@@ -128,6 +128,11 @@ with in operator, Frequency counter problem, Programming examples and Demonstrat
 Chessboard model and Demonstrations.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/jLEtxsjT88M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M2 L7</td>
+      <td>Functions, Definition and Parameters, Function Execution, Advantages, Programming examples and Demonstrations.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/im5SK9zwjCE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 
 </body>
