--- a/CNL.htm
+++ b/CNL.htm
@@ -62,9 +62,9 @@
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/QDw6pN9JYG8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>E2 L4</td>
+      <td>RSA Algorithm Implementation Psuedocode</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/FGL8mrC563U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
