--- a/DBMS.htm
+++ b/DBMS.htm
@@ -72,6 +72,11 @@
       <td>Relational Algebra, select operation  , Project operation, Rename and Set theory operation.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/TQMl4B_ppdA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M2 L8</td>
+      <td>Relational Algebra,Join operations,theta join,equi join,natural join , full outer join ,right and left outer join.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/sitj9sNz--4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
