--- a/2 YR CSE/2SE/2SE.htm
+++ b/2 YR CSE/2SE/2SE.htm
@@ -1,166 +1,163 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="..\..\responsive.css">
-  <title>SE</title>
+  <title="SE">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
+<style>
+  * {
+    margin: -2;
+  }
+
+  body {
+    background-color: #f7f7ee;
+  }
+
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  td,
+  th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+    text-decoration: none;
+  }
+
+
+  table th {
+    background-color: white;
+    color: black;
+  }
+
+  a:link {
+    text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration:wavy;
+  }
+
+  a:active {
+    text-decoration: wavy;
+  }
+
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #b6eb7a;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+
+  @media screen and (max-height: 450px) {
+    .sidenav {
+      padding-top: 15px;
+    }
+
+    .sidenav a {
+      font-size: 18px;
+    }
+  }
+
+  header {
+    background-color: #b6eb7a;
+    padding: 10px;
+    border: none;
+    font-size: 20px;
+  }
+
+  footer {
+    padding: 30px;
+    background-color: #17706e;
+    color: black;
+  }
+</style>
 
 <body>
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="index.htm">Home</a>
-    <a href="2CSE.htm">3 SEM CS</a>
-    <a href="CONTACT.htm">Contact</a>
-  </div>
-  <script>
-    function openNav() {
-      document.getElementById("mySidenav").style.width = "250px";
-    }
 
-    function closeNav() {
-      document.getElementById("mySidenav").style.width = "0";
-    }
-  </script>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="index.htm">Home</a>
+          <a href="2CSE.htm">3 SEM CS</a>
+          <a href="CONTACT.htm">Contact</a>
+        </div>
+        <header>
+          <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
+        </header>
+        <br>
+        <marquee>updated 12/10/2020</marquee>
+        <br>
+        <script>
+          function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+          }
 
-  <header>
-    <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
-  </header>
+          function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+          }
+        </script>
+        <br>
+        <table>
+          <tr>
+            <th>SR NO</th>
+            <th>MODULE</th>
+          </tr>
+          <tr>
+            <td>1.</td>
+            <td><a href="2SEM1.htm">MODULE-1</a></td>
+          </tr>
+          <tr>
+            <td>2.</td>
+            <td><a href="2SEM2.htm">MODULE-2</a></td>
+          </tr>
+          <tr>
+            <td>3.</td>
+            <td><a href="2SEM3.htm">MODULE-3</a></td>
+          </tr>
 
-  <marquee>DATA AS IN YOUTUBE. ANY QUERY PLEASE CONTACT US.UPDATED 13/10/2020 10:50AM</marquee>
-  <h1>Software Engineering (SE).</h1>
-  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
+          
+        </table>
 
-  <table>
-    <tr>
-      <td>M1 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Riuv_vt2mrI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Software Engineering, Ethics of softwre engineering, attributes of Software Engineering, application of SE.
-      </td>
-    </tr>
-    <tr>
-      <td>M1 L2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/S4n2NZ_qIKc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Software engineering concepts are use in embedded system, information system etc. with the help of some casestudies.
-      </td>
-    </tr>
-    <tr>
-      <td>M1 L3</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/qDpRt7VipPE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Software process, types of software process models- water fall models , incremental model and spiral models.
-      </td>
-    </tr>
-    <tr>
-      <td>M1 L3</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/0ETYNAdtfGA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Requirements Specification ,natural language specification,structured specification,Requirement elicitation and analysis.</td>
-    </tr>
-    <tr>
-      <td>M1 L4</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/45fJoXL3AuY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Activites of SE, specifiction, requirement engineering process, Design and implementation, sofware verification, software evolution.
-      </td>
-    </tr>
-    <tr>
-      <td>M1 L5</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/6tFNaG2t3SU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Requirements definition , user requirements, system requirements,functional requirements and non functional requirements.
-      </td>
-    </tr>
-    <tr>
-      <td>M1 L7</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/TEVzGB7gEh4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td> Requirements elicitation and analysis,requirment discovery, interview, enthnograpy , requirement validation , requirement mangement</td> 
-    </tr>
-    <tr>
-      <td>M2 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/51f7lK8OSiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>DEFINITION ON OBJECT ORIENTATION, DEVELOPMENT, OBJECT ORIENTED MODELING OBJECT ORIENTED METHODLOGY AND STAGES OF METHODLOGY.
-      </td>
-    </tr>
-    <tr>
-      <td>M2 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/GOHYUhVRwVQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>THREE MODEL , CLASS DIAGRAM,STATE DIAGRAM,SEQUENCE DIAGRAM, OO THEMES.</td> 
-    </tr>
-    <tr>
-      <td>M2 L2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/XNn1_tQUV3c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td> Modeling, models server serveral pupose
-      </td>
-    </tr>
-    <tr>
-      <td>M2 L2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/7G38UVP8DdY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Class model ,state model, interaction model,three model
-      </td>
-    </tr>
-    <tr>
-      <td>M2 L3</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/7G38UVP8DdY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Class model ,state model, interaction model,three model.</td>
-    </tr>
-    <tr>
-      <td>M2 L5</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/SQYmjuePLyc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Object and class concepts, Class diagram , values and attributes ,classes, operations and methods , link and associations.</td>
-    </tr>
-    <tr>
-      <td>M2 L6</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/6lZUsT0xttc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Navigation of Class model with example of class model for managing credit card accounts.</td>
-    </tr>
-    <tr>
-      <td>M2 L7</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/EKynYOQIe7Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Generalization and inheritance, sample class model,object Constraint Language(OCL).</td>
-    </tr>
-    <tr>
-      <td>M3 L1</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/T21tYZ25Jh4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>System Modeling, different perspective , different types of UML, three ways of graphical models , context model, example of context model.</td>
-    </tr>
-    <tr>
-      <td>M3 L1.2</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/941SduVAgLM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Interaction Modeling, Use case Modeling,Sequence diagrams,example of use case modeling, tabular description of the usecase modeling example.
-      </td>
-    </tr>
-    <tr>
-      <td>M3 L1.3</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/1TFP8f3EAwc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td>Structural Modeling, Class diagram, Generalization hierarchy, Aggreation with example.</td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td></td>
-    </tr>
-  </table>
-
-  </body>
-
+</body>
 
 </html>
