--- a/3 YR CSE/UP/UP.htm
+++ b/3 YR CSE/UP/UP.htm
@@ -1,113 +1,160 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
+  <title="UP">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UP </title>
-  <link rel="stylesheet" href="..\responsive.css">
 
 </head>
+<style>
+  * {
+    margin: -2;
+  }
+
+  body {
+    background-color: #f7f7ee;
+  }
+
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  td,
+  th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+    text-decoration: none;
+  }
+
+
+  table th {
+    background-color: white;
+    color: black;
+  }
+
+  a:link {
+    text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration:wavy;
+  }
+
+  a:active {
+    text-decoration: wavy;
+  }
+
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #b6eb7a;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+
+  @media screen and (max-height: 450px) {
+    .sidenav {
+      padding-top: 15px;
+    }
+
+    .sidenav a {
+      font-size: 18px;
+    }
+  }
+
+  header {
+    background-color: #b6eb7a;
+    padding: 10px;
+    border: none;
+    font-size: 20px;
+  }
+
+  footer {
+    padding: 30px;
+    background-color: #17706e;
+    color: black;
+  }
+</style>
 
 <body>
 
-  <table>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="index.htm">Home</a>
-      <a href="5CSE.htm">5 SEM CS</a>
-      <a href="CONTACT.htm">Contact</a>
-    </div>
-    <script>
-      function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
-      }
-  
-      function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-      }
-    </script>
-  
-    <header>
-      <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
-    </header>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="index.htm">Home</a>
+          <a href="2CSE.htm">3 SEM CS</a>
+          <a href="CONTACT.htm">Contact</a>
+        </div>
+        <header>
+          <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
+        </header>
+        <br>
+        <marquee>updated 12/10/2020</marquee>
+        <br>
+        <script>
+          function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+          }
 
-    <br>
-    <marquee>UPDATED 13/10/2020 10:50AM</marquee>
-    <br>
+          function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+          }
+        </script>
+        <br>
+        <table>
+          <tr>
+            <th>SR NO</th>
+            <th>MODULE</th>
+          </tr>
+          <tr>
+            <td>1.</td>
+            <td><a href="UPM1.htm">MODULE-1</a></td>
+          </tr>
+          <tr>
+            <td>2.</td>
+            <td><a href="UPM2.htm">MODULE-2</a></td>
+          </tr>
 
-    <h1>Unix Programming (UP).</h1>
-    <p><strong>NOTE:</strong> Make the video full screen and do watch.</p>
 
-    <tr>
-      <td>M1 L1</td>
-      <td>UNIX ARCHITECTURE, FEATURES, ENVIRONMENTS and POSIX standards.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/jvwq9_mzafs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M1 L2</td>
-      <td>Command structure,types of command and basic UNIX command standards.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/oH3j9FoDuqA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M1 L3</td>
-      <td> Combining commands, root login, su, concept of files.
-</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/yjTBiAViPW0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+          
+        </table>
 
-    </tr>
-    <tr>
-      <td>M1 L4</td>
-      <td>Command structure, types of command and basic unix command standards.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/AXNWnK3yHB4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M1 L5</td>
-      <td>directory commands, mkdir, rmdir, cd, pwd.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/GbN8jG6aFI4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M1 L6</td>
-      <td>File related commands such as cp, mv, rm, od and cat.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/X6O3CciyzTQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M2 L1</td>
-      <td>ls command with different options, ls -l and ls -d command, listing file attributes.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/8C_C2KEuMyg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M2 L2</td>
-      <td>Different file categories or ownership of a file, different file permissions for a file, changing file permission using relative, absolute and recursive manner.
-</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ptxF9Fmg3k8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M2 L3</td>
-      <td>Shell's interpretive cycle, Shell's wild cards, Redirection, Three standard files.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/0HHd4cjAONg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M2 L4</td>
-      <td>PIPE,Basic and Extended regular expressions,grep,egrep.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/LajiW_EN43A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M2 L5</td>
-      <td>Variable,Read command,command line arguments and exit status.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/xlXvpBQfuko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M2 L6</td>
-      <td>Conditional statements,test,set and shift commands.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/pEdaVvWfyiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M2 L6-1</td>
-      <td>Demonstration on concepts of Lecture-6(M2 L6)</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/bq2-KZPpEJo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-  </table>
 </body>
 
 </html>
-
